Document the Error Prone plugin in the manual
Add user documentation for running the Checker Framework as an Error Prone
plugin, and for supplying suggested fixes:

- external-tools.tex: new "Error Prone" section covering the two ways to
  combine the Checker Framework and Error Prone (side by side, per
  docs/examples/errorprone; and CF as an Error Prone plugin, per
  docs/examples/eisop-errorprone), enabling the eisopcf plugin, selecting type
  systems, passing -A options, severity, suppression, and suggested fixes /
  patching. Add it to the chapter section list and introduction.tex tool list.
- introduction.tex: mention running as an Error Prone plugin as an alternative
  execution mode.
- Gradle section: list the complete example Gradle projects.
- creating-a-checker.tex: new "Suggesting fixes for errors" subsection
  (DiagMessage.withFixes, SuggestedFixData.deleteTree/replaceTree), pointing to
  NullnessNoInitVisitor as a worked example.
- CLAUDE.md: add framework-errorprone to the subproject list.
- Trim docs/developer/cf-errorprone.md to developer-only notes that point to the
  manual for usage; update the decision log (ADR-0008/0011) accordingly.

Docs-only; the manual compiles and spotlessCheck passes.